--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "expo": "^49.0.16",
     "expo-status-bar": "~1.6.0",
+    "lottie-react-native": "^6.4.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-chart-kit": "^6.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
