--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "lottie-react-native": "^5.1.6",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-chart-kit": "^6.12.0"
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-svg": "13.9.0",
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
