--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-firebase/database": "^18.7.1",
+    "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
@@ -20,7 +22,9 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-simple-picker": "^3.1.4",
     "react-native-svg": "13.9.0",
+    "react-native-wheel-scrollview-picker": "^2.0.4",
     "react-navigation": "^5.0.0"
   },
   "devDependencies": {
