--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "^49.0.16",
+    "expo-firebase-crashlytics": "^2.0.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.0",
     "lottie-react-native": "^5.1.6",
